templates/server.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drone-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: drone
        component: server
    spec:
      containers:
        - image: drone/drone:0.5
          imagePullPolicy: Always
          name: drone-server
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            # Persist our configs in an SQLite DB in here
            - mountPath: /var/lib/drone
              name: drone-server-sqlite-db
            # Enables Docker in Docker
            - mountPath: /var/run/docker.sock
              name: docker-socket
          resources:
            requests:
              cpu: 40m
              memory: 32Mi
      volumes:
        - name: drone-server-sqlite-db
          gcePersistentDisk:
            pdName: drone-server-sqlite-db
            fsType: ext4
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
