templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    name: drone-server
  type: LoadBalancer
